from itertools import groupby
from typing import Optional

from bs4 import Tag, BeautifulSoup

from anki_addons_dataset.collector.url_parser import UrlParser
from anki_addons_dataset.collector.ankiweb.addon_branch_parser import AddonBranchParser
from anki_addons_dataset.collector.overrider.overrider import Overrider
from anki_addons_dataset.common.data_types import AddonHeader, AddonInfo, AddonId, URL, GitHubLink, GithubRepo, \
    GithubInfo, AddonPage, AddonBranch, HtmlStr, AnkiForumInfo


class AddonPageParser:
    def __init__(self, overrider: Overrider) -> None:
        self.overrider: Overrider = overrider

    def parse_addon_page(self, addon_header: AddonHeader, html: HtmlStr) -> AddonInfo:
        soup: BeautifulSoup = BeautifulSoup(html, 'html.parser')
        all_links: list[URL] = UrlParser.extract_all_links(html)
        github_links: list[GitHubLink] = UrlParser.find_github_links(all_links)
        other_links: list[URL] = [link for link in all_links if link not in github_links]
        github_repo: Optional[GithubRepo] = self.__deduct_github_repo_name(addon_header.id, github_links)
        anki_forum_links: list[URL] = UrlParser.find_anki_forum_links(all_links)
        anki_forum_url: Optional[URL] = self.__deduct_anki_forum_url(addon_header.id, anki_forum_links)
        github_info: GithubInfo = GithubInfo(github_links, github_repo, [], 0, None, 0, 0)
        likes: int = self.__extract_likes(soup)
        dislikes: int = self.__extract_dislikes(soup)
        addon_branches: list[AddonBranch] = self.__extract_addon_branches(soup)
        addon_page: AddonPage = AddonPage(html, likes, dislikes, addon_branches, other_links)
        anki_forum_info: AnkiForumInfo = AnkiForumInfo(anki_forum_url, None, None, None, None)
        addon_info: AddonInfo = AddonInfo(addon_header, addon_page, github_info, anki_forum_info)
        return addon_info

    def __deduct_github_repo_name(self, addon_id: AddonId, github_urls: list[GitHubLink]) -> Optional[GithubRepo]:
        override_link: Optional[GitHubLink] = self.overrider.override_github_link(addon_id)
        if override_link:
            return override_link.repo
        not_null_urls: list[GitHubLink] = [link for link in github_urls if link.repo is not None]
        filtered_urls: list[GitHubLink] = AddonPageParser.__exclude_links(not_null_urls)
        filtered_urls.sort(key=lambda link: link.repo.get_id())
        grouped: groupby[GithubRepo, GitHubLink] = groupby(filtered_urls, key=lambda link: link.repo)
        counts: dict[GithubRepo, int] = {k: len(list(v)) for k, v in grouped}
        if len(counts) == 0:
            return None
        max_tuple: tuple[GithubRepo, int] = max(counts.items(), key=lambda item: item[1])
        github_repo: GithubRepo = max_tuple[0]
        return github_repo

    def __deduct_anki_forum_url(self, addon_id: AddonId, anki_forum_urls: list[URL]) -> Optional[URL]:
        override_url: Optional[URL] = self.overrider.override_anki_forum_url(addon_id)
        if override_url:
            return override_url
        urls_sorted: list[URL] = list(anki_forum_urls)
        urls_sorted.sort()
        grouped: groupby[URL, URL] = groupby(urls_sorted)
        counts: dict[URL, int] = {k: len(list(v)) for k, v in grouped}
        if len(counts) == 0:
            return None
        max_tuple: tuple[URL, int] = max(counts.items(), key=lambda item: item[1])
        return max_tuple[0]

    @staticmethod
    def __exclude_links(links: list[GitHubLink]) -> list[GitHubLink]:
        exclude_urls: list[str] = [
            'https://github.com/ankitects/anki',
            'https://github.com/ankidroid/anki-android',
            'https://github.com/tesseract-ocr/tesseract',
            'https://github.com/mpv-player/mpv',
            'https://github.com/dae/anki',
            'https://github.com/rhasspy/piper',
            'https://github.com/btbn/ffmpeg-builds',
            'https://github.com/beautify-web/js-beautify',
            'https://github.com/tesseract-ocr/tessdata'
        ]
        filtered_links: list[GitHubLink] = []
        for link in links:
            if all(not link.url.lower().startswith(prefix.lower()) for prefix in exclude_urls):
                filtered_links.append(link)
        return filtered_links

    @staticmethod
    def __extract_likes(soup: BeautifulSoup) -> int:
        like_image: Optional[Tag] = soup.find('img', alt='thumbs up')
        likes: int = int(like_image.next_sibling.get_text()) if like_image and like_image.next_sibling else 0
        return likes

    @staticmethod
    def __extract_dislikes(soup: BeautifulSoup) -> int:
        like_image: Optional[Tag] = soup.find('img', alt='thumbs down')
        dislikes: int = int(like_image.next_sibling.get_text()) if like_image and like_image.next_sibling else 0
        return dislikes

    @staticmethod
    def __extract_addon_branches(soup: BeautifulSoup) -> list[AddonBranch]:
        addon_branches: list[AddonBranch] = []
        addon_branches_tag: Optional[Tag] = soup.find('ul', class_='mb-0')
        if addon_branches_tag:
            for addon_branch_tag in addon_branches_tag.find_all('li'):
                text: str = addon_branch_tag.get_text().strip()
                addon_branch: AddonBranch = AddonBranchParser.extract_addon_branch(text)
                addon_branches.append(addon_branch)
        return addon_branches
