@startuml
'https://plantuml.com/class-diagram
hide empty members

package anki_addons_dataset {
    class Main
    package argument {
        class ScriptArguments
        class Operation
    }
    package common {
        class WorkingDir
        class SnapshotDir
        class AddonInfos
        class AddonHeader
        class GitHubUser
        class GithubRepo
        class GithubInfo
        class AddonBranch
        class AddonPage
        class AddonInfo
        class AnkiForumInfo
        class Aggregation
    }
    package facade {
        class Facade
        class RawMetadata
    }
    package collector {
        class CollectorFacade
        class AddonCollector
        package overrider {
            class Overrider
        }
        package awnkiweb {
            class AddonPageParser
            class AnkiWebService
        }
        package github {
            class GithubService
        }
        package enricher {
            class Enricher
        }
    }
    package aggregator {
        class Aggregator
    }
    package exporter {
        class ExporterFacade
    }
    package huggingface {
        class HuggingFace
    }
    package bundle {
        class DatasetBundle
    }
}

ScriptArguments --> Operation
Main --> ScriptArguments
Main --> WorkingDir
Main --> Facade
WorkingDir "1" o-- "*" SnapshotDir
Facade --> RawMetadata
Facade --> CollectorFacade
CollectorFacade --> AddonCollector
AddonPageParser --> Overrider
AnkiWebService --> AddonPageParser
AddonCollector --> AnkiWebService
AddonCollector --> Overrider
Enricher --> GithubService
AddonCollector --> Enricher
Facade --> Aggregator
Facade --> ExporterFacade
Facade --> HuggingFace
Facade --> DatasetBundle

AddonInfos "1" o-- "*" AddonInfo
AddonInfos "1" o-- "1..0" GithubRepo
AddonInfo o-- AddonHeader
AddonInfo o-- AddonPage
AddonInfo "1" o-- "1..0" GithubInfo
AddonInfo "1" o-- "1..0" AnkiForumInfo

@enduml